--- a/_assets/style.css
+++ b/_assets/style.css
@@ -4,15 +4,15 @@
 }
  
 body{
-	font-family: 'myLXGW';
+	font-family: 'LXGW WenKai';
 	font-size: 20;
 }
 
 .markdown-body{
-	font-family: 'myLXGW';
+	font-family: 'LXGW WenKai';
 	font-size: 18;
 }
 
 .markdown-title{
-	font-family: 'myLXGW';
+	font-family: 'LXGW WenKai';
 }
