--- a/_assets/style.css
+++ b/_assets/style.css
@@ -1,18 +1,23 @@
 @font-face {
-	font-family: 'LXGW WenKai';
+	font-family: 'myLXGW';
 	src: url('https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/LXGWWenKai-Regular.ttf');
 }
- 
+
+@font-face {
+	font-family: 'myFira';
+	src: url('https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/LXGWWenKai-Regular.ttf');
+}
+
 body{
-	font-family: 'LXGW WenKai';
+	font-family: 'myFira', 'myLXGW';
 	font-size: 20;
 }
 
 .markdown-body{
-	font-family: 'LXGW WenKai';
+	font-family: 'myFira', 'myLXGW';
 	font-size: 18;
 }
 
 .markdown-title{
-	font-family: 'LXGW WenKai';
+	font-family: 'myFira', 'myLXGW';
 }
